Fix form validation and Overflow on smaller screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,8 @@ section[id] {
 /* challenges section */
 
 #challenges {
-  padding: 4rem 0;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .card-container {
